refactored gwt.xml and gwt-plugin enabling 3 times faster builds