@@ -52,10 +52,10 @@
 				<executions>
 					<execution>
 						<configuration>
+							<module>harvesterUI.HarvesterUI</module>
 							<style>OBFUSCATED</style>
-							<extraJvmArgs>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</extraJvmArgs>
-							<!--Can't disable these unneeded artifacts, so compile them outside 
-								of the target WAR -->
+							<localWorkers>4</localWorkers>
+							<extraJvmArgs>-Xms512m -Xmx512m</extraJvmArgs>
 							<deploy>${project.build.directory}/gwt-deploy</deploy>
 						</configuration>
 						<goals>
